# pgnc_solr_load

./: .gitignore  Dockerfile  PYLANCE_CONFIG.md  README.md  TESTING_SUMMARY.md  pyproject.toml  pyrightconfig.json  requirements.txt  run_tests.py
.github/actions/calculate-version/: action.yml  index.js  package.json
.github/instructions/: dev_workflow.instructions.md  self_improve.instructions.md  taskmaster.instructions.md  vscode_rules.instructions.md
.github/workflows/: python-release.yml
docs/: API_REFERENCE.md  DATABASE_SCHEMA.md  DEVELOPMENT_GUIDE.md  PROJECT_OVERVIEW.md  README.md
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_e521ef5278879d67___init___py.html  z_e521ef5278879d67_basic_status_py.html  z_e521ef5278879d67_gene_status_py.html  z_e521ef5278879d67_nomenclature_py.html
tests/: README.md  conftest.py
tests/data-load/: __init__.py  conftest.py  test_integration.py  test_main.py
tests/data-update/: __init__.py  conftest.py  test_gene_model.py  test_solr_main.py
tests/db/: README.md  __init__.py  conftest.py  test_config.py  test_init.py  test_integration.py
tests/enum_types/: __init__.py  test_basic_status.py  test_gene_status.py  test_integration.py  test_nomenclature.py
tests/insert/: README.md  __init__.py  test_gene_location.py  test_gene_locus_type.py  test_gene_name.py  test_gene_symbol.py  test_gene_xref.py  test_integration.py
tests/models/: README.md  __init__.py  conftest.py  test_base.py  test_gene.py  test_gene_has_symbol.py  test_integration.py  test_location.py  test_symbol.py  test_user.py
(+2 files in other folders)
