[tool.pyright]
include = ["tests", "bin"]
exclude = ["**/__pycache__", "**/.pytest_cache"]
extraPaths = ["bin/data-load/db"]
pythonVersion = "3.13"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["bin"]
include = ["*"]

[tool.setuptools]
package-dir = {"" = "bin"}

[project]
name = "pgnc-data-load"
dynamic = ["version"]
description = "PGNC data loading utilities"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "certifi==2024.12.14",
    "charset-normalizer==3.4.1",
    "idna==3.10",
    "psycopg2-binary==2.9.10",
    "pysolr==3.10.0",
    "requests==2.32.3",
    "setuptools==75.8.0",
    "urllib3==2.3.0",
    "numpy==2.2.3",
    "pandas==2.2.3",
    "SQLAlchemy==2.0.38",
    "pytest==8.4.1",
    "pytest-cov==6.2.1",
    "pytest-mock==3.15.0"
]
